Add UART functionality

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,7 +1,9 @@
 TARGET   := pynqz2-ram-tester
 LDSCRIPT := ldscript
-OFILES   := src/startup.o src/main.o
 BIF      := bif
+OFILES := \
+	src/startup.o \
+	src/main.o src/uart.o
 
 CC := clang --target=arm-none-eabi
 BOOTGEN := bootgen
@@ -11,9 +13,10 @@ CFLAGS  := \
 	-march=armv7a -mcpu=cortex-a9 \
 	-Os -v \
 	-Wall -Wno-main-return-type -Werror \
+	-ffunction-sections -fdata-sections \
 	-Iinclude/
 LDFLAGS := -v -nostdlib
-BOOTGENFLAGS := -arch zynq
+BOOTGENFLAGS := -arch zynq -w on
 
 .PHONY: all
 all: BOOT.BIN
